chroe: add swagger container, correct swagger notation
